# bsdiff

./: .gitignore  CMakeLists.txt  LICENSE  Makefile-bsdiff.am  Makefile.am  README.md  autogen.sh  bscommon.h  bsdiff.c  bsdiff.h  bsdiffpatch-test.c  bspatch.c  bspatch.h  configure.ac
.github/workflows/: build.yml  cmake.yml  publish.yml
